--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<form>
+  <div class="container fixed-width border border-primary">
+    <div class="text-center">
+      <h1>Login to Your Account</h1>
+    </div>
+    <div class="d-flex justify-content-between border border-primary">
+      <div class="d-flex flex-column w-50 py-3 px-3 border-right">
+        <div class="form-group">
+          <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+        </div>
+        <div class="form-group">
+          <label class="form-check-label"><input type="checkbox"> Remember me</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Sign in</button>
+      </div>
+      <div class="d-flex flex-column w-50">
+        <div> <a href="#"> <span class="fa fa-twitter"></span> Twitter </a> </div>
+        <div> <a href="#"> <span class="fa fa-facebook"></span> Facebook </a> </div>
+        <div> <a href="#"> <span class="fa fa-google-plus"></span> Google+ </a> </div>̥
+      </div>
+    </div>
+  </div>
+</form>
