--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,34 @@
 <form>
-  <div class="container fixed-width border border-primary">
+  <div class="container border border-primary">
     <div class="text-center">
       <h1>Login to Your Account</h1>
     </div>
-    <div class="d-flex justify-content-between border border-primary">
-      <div class="d-flex flex-column w-50 py-3 px-3 border-right">
-        <div class="form-group">
+    <div class="row col-sm-12">
+      <div class="col-sm-8">
+        <div class="col-sm-12 mx-auto py-2">
           <input type="email" class="form-control" id="inputEmail" placeholder="Email">
         </div>
-        <div class="form-group">
+        <div class="col-sm-12 mx-auto py-2">
           <input type="password" class="form-control" id="inputPassword" placeholder="Password">
         </div>
-        <div class="form-group">
-          <label class="form-check-label"><input type="checkbox"> Remember me</label>
+        <div class="row col-sm-12 mx-auto py-2">
+          <label class="col-sm-4"><input type="checkbox"> Remember me</label>
+          <button class="col-sm-8" type="submit" class="btn btn-primary">Sign in</button>
         </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
       </div>
-      <div class="d-flex flex-column w-50">
-        <div> <a href="#"> <span class="fa fa-twitter"></span> Twitter </a> </div>
-        <div> <a href="#"> <span class="fa fa-facebook"></span> Facebook </a> </div>
-        <div> <a href="#"> <span class="fa fa-google-plus"></span> Google+ </a> </div>̥
+      <div class="col-sm-4">
+        <div class="col-sm-12">
+          <button type="button" class="col-sm-12 btn btn-primary mt-2 twitter-color"> <span class="fa fa-twitter"></span>
+            Twitter</button>
+        </div>
+        <div class="col-sm-12">
+          <button type="button" class="col-sm-12 btn btn-primary mt-2 fb-color"> <span class="fa fa-facebook"></span>
+            Facebook</button>
+        </div>
+        <div class="col-sm-12">
+          <button type="button" class="col-sm-12 btn btn-primary mt-2 google-color"> <span class="fa fa-google-plus"></span>
+            Google</button>
+        </div>
       </div>
     </div>
   </div>
