--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,14 @@
-.ng-valid[required], .ng-valid.required  {
-  border-left: 5px solid #42A948; /* green */
+@import url("https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css");
+
+.placeicon {
+  font-family: fontawesome
 }
 
-.ng-invalid:not(form)  {
-  border-left: 5px solid #a94442; /* red */
+.custom-control-label::before {
+  background-color: #dee2e6;
+  border: #dee2e6
+}
+
+input.ng-invalid.ng-touched{
+  border-left: 5px solid red !important;
 }
